--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
         <link href="https://unpkg.com/quill@1.3.7/dist/quill.snow.css" rel="stylesheet" />
     </head>
     <body>
-        <app-expense-list></app-expense-list>
+    <app-root></app-root>
     </body>
 </html>
